# cbor-model

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release-please.yml
src/cbor_model/: __init__.py  _field.py  _model.py  _util.py
src/cbor_model/cddl/: _cddl.py  _field_processor.py  _naming.py  _type_converter.py
src/cbor_model/types/: __init__.py  _types.py
tests/: test_cbor.py  test_cddl.py  test_cddl_type_aliases.py
