[project]
name = "cbor-model"
version = "0.3.0"
description = "CBOR Model: Add CBOR and CDDL support to Pydantic models"
readme = "README.md"
authors = [
    { name = "William Häggqvist" }
]
requires-python = ">=3.12"
dependencies = [
    "cbor2>=5.8.0",
    "pydantic>=2.12.5",
]
license = "MIT"
keywords = [
    "serialization",
    "cbor",
    "cddl"
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]

[project.urls]
repository = "https://github.com/haggqvist/cbor-model"
issues = "https://github.com/haggqvist/cbor-model/issues"

[build-system]
requires = ["uv_build>=0.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
fix = true
target-version = "py312"

[tool.ruff.lint]
ignore  = ["D104"]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "D"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
